Put fixed containers on same z-index

--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -36,7 +36,7 @@ body.uex-modal-active {
 }
 
 .uex-modal {
-  z-index: 10001;
+  z-index: 10000;
   position: fixed;
   top: 0;
   right: 0;
