--- a/src/components/pop/pop.scss
+++ b/src/components/pop/pop.scss
@@ -8,7 +8,7 @@ uex-pop {
   border: 1px solid rgba(0,0,0,.15);
   box-shadow: 0 5px 10px rgba(0,0,0,.12);
   border-radius: 6px;
-  z-index: 10001;
+  z-index: 10000;
   display: flex;
   flex-flow: column nowrap;
   overflow: hidden;
