--- a/src/components/poptip/poptip.scss
+++ b/src/components/poptip/poptip.scss
@@ -28,7 +28,7 @@ uex-poptip {
 .uex-poptip {
   position: absolute;
   pointer-events: none;
-  z-index: 10001;
+  z-index: 10000;
 
   strong {
     color: #fff;
